[package]
name = "rust-tar-token-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
aws-config = "1.1.8"
aws-sdk-s3 = "1.19.1"
tokio = { version = "1.36.0", features = ["full"] }
async-compression = {version ="0.4.6", features=["all"]}
zstd = "0.13.1"
glob = "0.3.1"
tar = "0.4.40"
serde_json = "1.0.97"
clap = { version = "4.1.11", features = ["derive"] }
flate2 = "1.0"
dashmap = "5.5.3"
indicatif = "0.17.8"
threadpool = "1.8.1"
rand = "0.8.5"
rayon = "1.10.0"




